# django-htmx-refresh

./: .gitignore  LICENSE  README.md  setup.cfg
django_htmx_refresh/: apps.py  middleware.py  mixins.py
